erDiagram
    HOSPITALS ||--o{ STAFF : employs
    HOSPITALS ||--o{ HOSPITAL_PATIENTS : scopes
    PATIENTS  ||--o{ HOSPITAL_PATIENTS : "is registered as"

    HOSPITALS {
        uuid        id                PK
        text        code             UK "slug used as the `hospital` API field, e.g. hospital-a"
        text        name             UK "display name, e.g. Hospital A"
        text        his_adapter_type  "which HISClient implementation to use"
        text        his_base_url      "nullable, that hospital's HIS endpoint"
        timestamptz created_at
        timestamptz updated_at
    }

    STAFF {
        uuid        id            PK
        uuid        hospital_id   FK
        text        username       "unique within hospital_id, NOT globally"
        text        password_hash  "bcrypt"
        timestamptz created_at
        timestamptz updated_at
    }

    PATIENTS {
        uuid        id             PK
        text        national_id    UK "nullable, unique when present"
        text        passport_id    UK "nullable, unique when present"
        text        first_name_th
        text        middle_name_th    "nullable"
        text        last_name_th
        text        first_name_en
        text        middle_name_en    "nullable"
        text        last_name_en
        date        date_of_birth     "nullable"
        text        phone_number      "nullable"
        text        email             "nullable"
        text        gender            "M, F or empty"
        timestamptz created_at
        timestamptz updated_at
    }

    HOSPITAL_PATIENTS {
        uuid        id          PK
        uuid        hospital_id FK
        uuid        patient_id  FK
        text        patient_hn   "hospital-local HN from that hospital's HIS"
        timestamptz synced_at    "last refresh from the HIS"
        timestamptz created_at
    }
